title and filter fix and custom Scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+	width: 5px;
+	background-color: #000;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #41464f;
+	border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	padding-right: 10px;
+	background-color: #35383d;
+}
